--- a/pom.xml
+++ b/pom.xml
@@ -1,66 +1,66 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>Cooker</groupId>
-	<artifactId>Cooker</artifactId>
-	<name>Cooker ${project.version}</name>
-	<description>A really lightweight plugin to cook your crap...</description>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>io.gihub.psgs</groupId>
+    <artifactId>Cooker</artifactId>
+    <name>Cooker ${project.version}</name>
+    <description>A really lightweight bukkit plugin to cook your food</description>
+    <version>1.1</version>
 
-	<build>
-		<sourceDirectory>src</sourceDirectory>
-		<defaultGoal>clean package</defaultGoal>
-		<directory>target</directory>
-		<finalName>Cooker</finalName>
-		<plugins>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
-				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
-				</configuration>
-			</plugin>
-		</plugins>
-		<resources>
-			<resource>
-				<targetPath>.</targetPath>
-				<filtering>true</filtering>
-				<directory>${project.basedir}</directory>
-				<includes>
-					<include>plugin.yml</include>
-					<include>config.yml</include>
-					<include>README.md</include>
-				</includes>
-			</resource>
-		</resources>
-	</build>
+    <build>
+        <sourceDirectory>src</sourceDirectory>
+        <defaultGoal>clean package</defaultGoal>
+        <directory>target</directory>
+        <finalName>Cooker</finalName>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+        </plugins>
+        <resources>
+            <resource>
+                <targetPath>.</targetPath>
+                <filtering>true</filtering>
+                <directory>${project.basedir}</directory>
+                <includes>
+                    <include>plugin.yml</include>
+                    <include>config.yml</include>
+                    <include>README.md</include>
+                </includes>
+            </resource>
+        </resources>
+    </build>
 
-	<version>v1.0</version>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
-	<repositories>
-		<repository>
-			<id>project.local</id>
-			<name>local repo</name>
-			<url>file:${project.basedir}/lib</url>
-		</repository>
-		<repository>
-			<id>github-repo</id>
-			<url>http://github.com/psgs/Cooker</url>
-		</repository>
-		<repository>
-        <id>bukkit-repo</id>
-        <url>http://repo.bukkit.org/content/groups/public</url>
+    <repositories>
+        <repository>
+            <id>project.local</id>
+            <name>local repo</name>
+            <url>file:${project.basedir}/lib</url>
         </repository>
-	</repositories>
+        <repository>
+            <id>github-repo</id>
+            <url>http://github.com/psgs/Cooker</url>
+        </repository>
+        <repository>
+            <id>bukkit-repo</id>
+            <url>http://repo.bukkit.org/content/groups/public</url>
+        </repository>
+    </repositories>
 
-	<dependencies>
-		<dependency>
-			<groupId>org.bukkit</groupId>
-			<artifactId>craftbukkit</artifactId>
-			<version>LATEST</version>
-		</dependency>
-	</dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>org.bukkit</groupId>
+            <artifactId>craftbukkit</artifactId>
+            <version>LATEST</version>
+        </dependency>
+    </dependencies>
 </project>
